add one more alias to .gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -8,6 +8,7 @@
     co = checkout
     b = branch
     d = diff
+    ds = diff --staged
     s = status
     unstage = reset HEAD --
     lg = "log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative"
