--- a/.screenrc
+++ b/.screenrc
@@ -10,7 +10,7 @@ autodetach on
 defscrollback 9000
 
 # for Emacs users, change the escape sequence to Ctrl-Z instead of Ctrl-A
-escape ^Jq
+escape ^xq
 
 # add window names at the bottom
 caption always "%?%F%{= kg}%:%{= kK}%? %L=%-Lw%50L>%{+b}*%n%f %t*%{-b}%+Lw%<"
