--- a/.gitconfig
+++ b/.gitconfig
@@ -10,6 +10,7 @@
     d = diff
     ds = diff --staged
     s = status
+    p = pull --rebase
     unstage = reset HEAD --
     lg = "log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative"
 [core]
