add git log for all branches

--- a/.gitconfig
+++ b/.gitconfig
@@ -12,7 +12,14 @@
     s = status
     p = pull --rebase
     unstage = reset HEAD --
-    lg = "log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative"
+    lg = "log --graph --pretty=format:'%Cred%h%Creset\
+        -%C(yellow)%d%Creset %s %Cgreen(%cr)\
+        %C(bold blue)<%an>%Creset' --abbrev-commit\
+        --date=relative"
+    lga = "log --graph --pretty=format:'%Cred%h%Creset \
+        -%C(yellow)%d%Creset %s %Cgreen(%cr) \
+        %C(bold blue)<%an>%Creset' --abbrev-commit \
+        --date=relative --all"
 [core]
     editor = vim
 	excludesfile = /home/jduan/.gitignore
