--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,6 +42,10 @@ set-window-option -g window-status-current-bg red
 
 #### session ####
 # Ctrl-x d  Detach current client
+# Ctrl-x : "rename-session <new_name>'  Rename the current session
+# $ tmux list-sessions
+# $ tmux attach-session -t <session_name>
+# $ tmux new-session -s <session_name>
 
 #### pane ####
 # Ctrl-x %  Split vertically
