--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,6 +26,13 @@ set -g status-left '#[fg=green]#H'
 # Highlight active window
 set-window-option -g window-status-current-bg red
 
+# pane movement: act like vim
+setw -g mode-keys vi
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 # notes
 #### window ####
 # Ctrl-x c  Create new window
@@ -48,6 +55,7 @@ set-window-option -g window-status-current-bg red
 # $ tmux new-session -s <session_name>
 
 #### pane ####
+# Ctrl-x Ctrl-o  Swap location of panes
 # Ctrl-x %  Split vertically
 # Ctrl-x : 'split-window -h' split horizontally
 # Ctrl-x q  Show pane numbers (type the pane number to go to that pane)
