tmux: turn off automatic window renaming

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,6 +55,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# turn off automatic rename of window name
+setw -g automatic-rename off
+
 # notes
 #### window ####
 # Ctrl-x c  Create new window
