--- a/.tmux.conf
+++ b/.tmux.conf
@@ -104,6 +104,9 @@ setw -g automatic-rename off
 # Ctrl-x : resize-pane -t 2 20 (Resizes the pane with the id of 2 down by 20 cells)
 # Ctrl-x : resize-pane -t -L 20 (Resizes the pane with the id of 2 left by 20 cells)
 
+#### redraw tmux window when switching from smaller monitor to bigger one ####
+# $ tmux attach -d # this will detach all the other clients
+
 #### other ####
 # Ctrl-x ?  List all bindings
 # Ctrl-x :  Type any command to execute it
