--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
     name = Jingjing Duan
-    email = duanjingjing@gmail.com
+    email = jingjing.duan@hulu.com
 [alias]
     a = add
     cm = commit -m
