--- a/.tmux.conf
+++ b/.tmux.conf
@@ -111,3 +111,6 @@ setw -g automatic-rename off
 # Ctrl-x ?  List all bindings
 # Ctrl-x :  Type any command to execute it
 # Ctrl-x t  Show time
+
+#### how to reorder windows?
+# Ctrl-x . This is aka 'move-window'. You can give it a new number.
