--- a/.gemrc
+++ b/.gemrc
@@ -1,2 +1,12 @@
-install: --no-rdoc --no-ri 
-update:  --no-rdoc --no-ri
+---
+:backtrace: false
+:benchmark: false
+:bulk_threshold: 1000
+:sources:
+- http://rubygems.org/
+- !binary |-
+  aHR0cDovL2dlbS5jb3JwLmh1bHUuY29t
+:update_sources: true
+:verbose: true
+install: --no-rdoc --no-ri
+update: --no-rdoc --no-ri
