change tmux prefix key to C-i

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,15 +1,14 @@
-# remap prefix to Control + a
-set -g prefix C-x
+# remap prefix to Control + i
 unbind C-b
-bind C-x send-prefix
+set -g prefix C-i
+bind C-i send-prefix
+# bind a key for 'last window'
+bind-key C-i last-window
 
 # split window horizontall and vertically
 unbind %
 bind | split-window -h
 bind - split-window -v
-
-# bind a key for 'last window'
-bind-key C-x last-window
 
 # reload tmux conf file
 bind r source-file ~/.tmux.conf
