--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,9 @@
-# remap prefix to Control + i
+# remap prefix to Control + o
 unbind C-b
-set -g prefix C-i
-bind C-i send-prefix
+set -g prefix C-o
+bind C-o send-prefix
 # bind a key for 'last window'
-bind-key C-i last-window
+bind-key C-o last-window
 
 # split window horizontall and vertically
 unbind %
