lower tmux log to 500 lines

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,7 +33,7 @@ set-window-option -g window-status-current-bg red
 setw -g aggressive-resize on
 
 # scrollback and copy
-set -g history-limit 5000
+set -g history-limit 500
 unbind [
 bind Escape copy-mode
 unbind p
@@ -53,6 +53,7 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+# swap panes: Prefix }
 
 # turn off automatic rename of window name
 setw -g automatic-rename off
