--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,9 @@ bind - split-window -v
 # reload tmux conf file
 bind r source-file ~/.tmux.conf
 
+# make it colorful
+set -g default-terminal "screen-256color"
+
 # THEME
 set -g status-bg black
 set -g status-fg white
@@ -114,3 +117,6 @@ setw -g automatic-rename off
 
 #### how to reorder windows?
 # Ctrl-x . This is aka 'move-window'. You can give it a new number.
+
+#### how to reload tmux config?
+# Prefix :source-file ~/.tmux.conf
