tmux: renumber windows

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,6 +61,9 @@ bind l select-pane -R
 # turn off automatic rename of window name
 setw -g automatic-rename off
 
+# window movement / renumbering like in screen's :number
+bind-key m command-prompt -p "move window to:"  "swap-window -t '%%'"
+
 # notes
 #### window ####
 # Ctrl-x c  Create new window
