--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,6 +64,9 @@ setw -g automatic-rename off
 # window movement / renumbering like in screen's :number
 bind-key m command-prompt -p "move window to:"  "swap-window -t '%%'"
 
+# how long it display panes when you do "prefix q"
+set -g display-panes-time 8000 # milliseconds
+
 # notes
 #### window ####
 # Ctrl-x c  Create new window
