--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,9 @@
-# remap prefix to Control + o
+# remap prefix to Control + j
 unbind C-b
-set -g prefix C-o
-bind C-o send-prefix
+set -g prefix C-j
+bind C-j send-prefix
 # bind a key for 'last window'
-bind-key C-o last-window
+bind-key C-j last-window
 
 # split window horizontall and vertically
 unbind %
