--- a/.gitconfig
+++ b/.gitconfig
@@ -18,6 +18,7 @@
     rh  = reset HEAD^
     rhh = reset HEAD^ --hard
     unstage = reset HEAD --
+    lp = log -p
     lg = "log --graph --pretty=format:'%Cred%h%Creset\
         -%C(yellow)%d%Creset %s %Cgreen(%cr)\
         %C(bold blue)<%an>%Creset' --abbrev-commit\
