--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,7 @@
     cma = commit --amend
     c   = commit
     co  = checkout
+    cp  = cherry-pick
     b   = branch
     d   = diff
     d1  = diff HEAD^
