--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,7 +20,7 @@ set -g default-terminal "screen-256color"
 # THEME
 set -g status-bg black
 set -g status-fg white
-set -g status-left ""
+set -g status-left "#[fg=green]#S"
 set -g status-right "#[fg=green]#H"
 # set -g status-interval 60
 # set -g status-left-length 30
