--- a/.gitconfig
+++ b/.gitconfig
@@ -19,7 +19,6 @@
     d3i = diff HEAD^^^ --ignore-all-space
     ds  = diff --staged
     s   = status
-    p   = pull --rebase
     rh  = reset HEAD^
     rhh = reset HEAD^ --hard
     unstage = reset HEAD --
@@ -38,6 +37,14 @@
     track = "!f(){ branch=$(git name-rev --name-only HEAD);\
         cmd=\"git branch --set-upstream $branch ${1:-origin}/${2:-$branch}\";\
         echo $cmd; $cmd;  }; f"
+	switch = !legit switch \"$@\"
+	branches = !legit branches
+	sprout = !legit sprout \"$@\"
+	unpublish = !legit unpublish \"$@\"
+	harvest = !legit harvest \"$@\"
+	sync = !legit sync \"$@\"
+	publish = !legit publish \"$@\"
+	graft = !legit graft \"$@\"
 [core]
     editor = vim
     excludesfile = ~/.gitignore
