--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set-option -g default-command "tmux rename-window base; reattach-to-user-namespace -l zsh"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 # remap prefix to Control + j
 unbind C-b
 set -g prefix C-j
