--- a/.gitconfig
+++ b/.gitconfig
@@ -11,12 +11,18 @@
     b   = branch
     d   = diff
     di  = diff --ignore-all-space
-    d1  = diff HEAD^
-    d2  = diff HEAD^^
-    d3  = diff HEAD^^^
-    d1i = diff HEAD^ --ignore-all-space
-    d2i = diff HEAD^^ --ignore-all-space
-    d3i = diff HEAD^^^ --ignore-all-space
+    d1  = diff HEAD~1
+    d2  = diff HEAD~2
+    d3  = diff HEAD~3
+    d4  = diff HEAD~4
+    d5  = diff HEAD~5
+    d6  = diff HEAD~6
+    d1i = diff HEAD~1 --ignore-all-space
+    d2i = diff HEAD~2 --ignore-all-space
+    d3i = diff HEAD~3 --ignore-all-space
+    d4i = diff HEAD~4 --ignore-all-space
+    d5i = diff HEAD~5 --ignore-all-space
+    d6i = diff HEAD~6 --ignore-all-space
     ds  = diff --staged
     f   = fetch
     fa  = fetch --all
