--- a/.jshintrc
+++ b/.jshintrc
@@ -1,3 +1,6 @@
 {
-    "expr": true
+    expr: true,
+    // This option defines globals available when your code is running inside of
+    // the Node runtime environment.
+    node: true
 }
