git stash pop alias

--- a/.gitconfig
+++ b/.gitconfig
@@ -42,6 +42,7 @@
     rh  = reset HEAD^
     rhh = reset HEAD^ --hard
     sl  = stash list
+    sp  = stash pop
     s0  = stash show -p stash@{0}
     s1  = stash show -p stash@{1}
     s2  = stash show -p stash@{2}
