set tmux pane-base-index to 1

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,7 @@ set -g status-right "#[fg=green]#H"
 
 # Highlight active window
 set-window-option -g window-status-current-bg red
+set-window-option -g pane-base-index 1
 
 # Rather than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
