--- a/.tmuxinator/study.yml
+++ b/.tmuxinator/study.yml
@@ -26,8 +26,7 @@ windows:
       panes:
         - racket
         - # empty shell
-  - sml:
+  - coursera:
       layout: even-horizontal
       panes:
-        - vim
-        - sml
+        - cd ~/coursera/programming_languages/; vim
