--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+# Install reattach-to-user-namespace via
+# https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 # remap prefix to Control + j
 unbind C-b
