--- a/.gemrc
+++ b/.gemrc
@@ -1,12 +1,10 @@
 ---
 :backtrace: false
-:benchmark: false
 :bulk_threshold: 1000
 :sources:
 - http://rubygems.org/
-- !binary |-
-  aHR0cDovL2dlbS5jb3JwLmh1bHUuY29t
 :update_sources: true
 :verbose: true
+benchmark: false
 install: --no-rdoc --no-ri
 update: --no-rdoc --no-ri
