--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,7 +17,7 @@ bind - split-window -v
 bind r source-file ~/.tmux.conf
 
 # make it colorful
-set -g default-terminal "xterm"
+set -g default-terminal "screen-256color"
 
 # THEME
 set -g status-bg black
