--- a/.gitconfig
+++ b/.gitconfig
@@ -105,9 +105,11 @@
 	trustExitCode = true
 [init]
 	templatedir = ~/.git_template
+[diff]
+    renames = true
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path = 
+	path =
 [mergetool "sourcetree"]
 	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
