--- a/.gitconfig
+++ b/.gitconfig
@@ -103,8 +103,8 @@
 	keepBackup = false
 [mergetool "vimdiff"]
 	trustExitCode = true
-[init]
-	templatedir = ~/.git_template
+# [init]
+# 	templatedir = ~/.git_template
 [diff]
     renames = true
 [difftool "sourcetree"]
