add 'git parents' alias

--- a/.gitconfig
+++ b/.gitconfig
@@ -65,6 +65,7 @@
     sd5 = stash drop stash@{5}
     s   = status
     unstage = reset HEAD --
+    parents = log --pretty=%P -n 1
     up = "!f(){ branch=$(git name-rev --name-only HEAD); cmd=\"git pull origin $branch\"; echo $cmd; $cmd; }; f"
     lp = log -p
     ln = log --name-only
