make tmux work on El Capitan

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # Install reattach-to-user-namespace via
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# set-option -g default-command "reattach-to-user-namespace -l zsh"
 # remap prefix to Control + j
 unbind C-b
 set -g prefix C-j
