--- a/.gitconfig
+++ b/.gitconfig
@@ -4,6 +4,7 @@
 [alias]
     a   = add
     ap  = add -p
+    au  = add -u
     cm  = commit -m
     cma = commit --amend
     c   = commit
@@ -42,6 +43,7 @@
     m   = merge
     mf  = merge --ff-only
     mb  = merge-base
+    mom = merge origin/master
     p   = pull
     pr  = pull --rebase
     r   = rebase
