change my gmail for git

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
     name = Jingjing Duan
-    email = jduan@twitter.com
+    email = jduan@fitbit.com
 [alias]
     a   = add
     ap  = add -p
