--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+# no delay when you hit Esc
+set -sg escape-time 0
+
 # Install reattach-to-user-namespace via
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
 # set-option -g default-command "reattach-to-user-namespace -l zsh"
