add git alias for pushing and tracking remote branch

--- a/.gitconfig
+++ b/.gitconfig
@@ -47,6 +47,8 @@
     mb  = merge-base
     mom = merge origin/master
     p   = pull
+    # push branch to origin and track it
+    po  = "!f(){ branch=$(git rev-parse --abbrev-ref HEAD); git push --set-upstream origin $branch; }; f"
     # create a new PR from origin/master
     pr  = !sh -c 'git checkout -b jduan/$1 $(git rev-parse origin/master)' -
     r   = rebase
