make pbyank work

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,8 +2,10 @@
 set -sg escape-time 0
 
 # Install reattach-to-user-namespace via
-# https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
-# set-option -g default-command "reattach-to-user-namespace -l zsh"
+# https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard or
+# brew install reattach-to-user-namespace
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # remap prefix to Control + j
 unbind C-b
 set -g prefix C-j
