--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,8 @@ set -sg escape-time 0
 # Install reattach-to-user-namespace via
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard or
 # brew install reattach-to-user-namespace
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "reattach-to-user-namespace -l fish"
+set-option -g default-shell /usr/local/bin/fish
 
 # remap prefix to Control + j
 unbind C-b
