--- a/.ideavimrc
+++ b/.ideavimrc
@@ -7,6 +7,8 @@ set smartcase
 set ignorecase
 set number
 set relativenumber
+" highlight matches with last search pattern
+set hlsearch
 
 " Emulated Vim Plugins
 set vim-surround
