--- a/.gitconfig
+++ b/.gitconfig
@@ -8,7 +8,7 @@
     ap  = add -p
     au  = add -u
     cm  = commit -m
-    cma = commit --amend
+    cma = commit --amend --no-edit
     c   = commit
     co  = checkout
     # checkout all files starting from the root of the repo
