--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,7 @@ set -sg escape-time 0
 # Install reattach-to-user-namespace via
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard or
 # brew install reattach-to-user-namespace
+# If tmux fails to start, you need to install reattach-to-user-namespace first!
 set-option -g default-command "reattach-to-user-namespace -l fish"
 set-option -g default-shell /usr/local/bin/fish
 
