tmux: Renumber windows automatically when a window is deleted

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -78,6 +78,9 @@ bind-key m command-prompt -p "move window to:"  "swap-window -t '%%'"
 # how long it display panes when you do "prefix q"
 set -g display-panes-time 8000 # milliseconds
 
+# Renumber windows automatically when a window is deleted
+set-option -g renumber-windows on
+
 # notes
 #### window ####
 # Ctrl-x c  Create new window
