--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,9 @@ set -sg escape-time 0
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard or
 # brew install reattach-to-user-namespace
 # If tmux fails to start, you need to install reattach-to-user-namespace first!
-set-option -g default-command "reattach-to-user-namespace -l fish"
+# The "shell > /dev/null 2>&1" trick changes the window name to "fish" rather
+# than "reattach-to-user-namespace".
+set-option -g default-command "shell > /dev/null 2>&1; reattach-to-user-namespace -l fish"
 set-option -g default-shell /usr/local/bin/fish
 
 # remap prefix to Control + j
