fix tmux default window name

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,9 +5,9 @@ set -sg escape-time 0
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard or
 # brew install reattach-to-user-namespace
 # If tmux fails to start, you need to install reattach-to-user-namespace first!
-# The "shell > /dev/null 2>&1" trick changes the window name to "fish" rather
+# The "echo" trick changes the window name to "echo" rather
 # than "reattach-to-user-namespace".
-set-option -g default-command "shell > /dev/null 2>&1; reattach-to-user-namespace -l fish"
+set-option -g default-command "echo; reattach-to-user-namespace -l fish"
 set-option -g default-shell /usr/local/bin/fish
 
 # remap prefix to Control + j
