tmux: change the default window name to hmmm

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,13 @@
 # no delay when you hit Esc
 set -sg escape-time 0
 
-# Install reattach-to-user-namespace via
-# https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard or
-# brew install reattach-to-user-namespace
 # If tmux fails to start, you need to install reattach-to-user-namespace first!
-# The "echo" trick changes the window name to "echo" rather
+# Do the following:
+# 1. brew install reattach-to-user-namespace
+# 2. sudo ln -s /usr/local/bin/reattach-to-user-namespace /usr/local/bin/hmmm
+# The "hmmm" trick changes the window name to "hmmm" rather
 # than "reattach-to-user-namespace".
-set-option -g default-command "echo; reattach-to-user-namespace -l fish"
+set-option -g default-command "/usr/local/bin/hmmm -l fish"
 set-option -g default-shell /usr/local/bin/fish
 
 # remap prefix to Control + j
