--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Jingjing Duan
-	email = jingjing.duan@airbnb.com
+	useConfigOnly = true
 [alias]
     a   = add
     # add existing files and new files (root is the root of the repo)
