--- a/.gitconfig
+++ b/.gitconfig
@@ -16,9 +16,8 @@
     com = checkout origin/master
     cos = checkout origin/stable
     cp  = cherry-pick
-    b   = branch
     # list branches ordered by most recent commit
-    bd  = for-each-ref --sort=-committerdate refs/heads/ --format="%(authordate:short)%09%(objectname:short)%09%1B[0;33m%(refname:short)%1B[m%09"
+    b   = for-each-ref --sort=-committerdate refs/heads/ --format="%(authordate:short)%09%(objectname:short)%09%1B[0;33m%(refname:short)%1B[m%09"
     d   = diff
     di  = diff --ignore-all-space
     d1  = diff HEAD~1
