git alias: ro for resetting to origin branch

--- a/.gitconfig
+++ b/.gitconfig
@@ -66,6 +66,8 @@
     r   = rebase
     ri  = rebase -i
     rc  = rebase --continue
+    # Reset origin hard
+    ro  = "!f(){ remote_branch=$(git rev-parse --abbrev-ref --symbolic-full-name @{u}); git reset --hard $remote_branch; }; f"
     rr  = "!f(){ remote_branch=$(git rev-parse --abbrev-ref --symbolic-full-name @{u}); git rebase $remote_branch; }; f"
     dm  = "!f(){ mb=$(git merge-base HEAD origin/master); git diff $mb; }; f"
     rv  = remote -v
