--- a/.tmuxinator/work.yml
+++ b/.tmuxinator/work.yml
@@ -35,6 +35,10 @@ windows:
       layout: even-vertical
       panes:
         - cd ~/repos/titanic
+  - data:
+      layout: even-vertical
+      panes:
+        - cd ~/repos/data; source ENV/bin/activate.fish
   - pry:
       layout: even-vertical
       panes:
